--- a/Reports/Result1.html
+++ b/Reports/Result1.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-09-24 23:06:05</span>
+					<span class='suite-started-time'>2020-10-12 17:46:51</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,13 +84,13 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>558h 8m 14s+620ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>984h 49m 0s+926ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>-348h -20926m -1255580s+-378ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>442h 26520m 1591244s+341ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
@@ -102,7 +102,7 @@
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-09-24 23:06:05</span> 
+							<span class='panel-lead suite-ended-time'>2020-10-12 17:46:51</span> 
 						</div> 
 					</div>
 				</div>
@@ -177,7 +177,7 @@
 										</tr>
 										<tr>
 											<td>Java Version</td>
-											<td>1.8.0_232</td>
+											<td>14.0.1</td>
 										</tr>
 										<tr>
 											<td>Host Name</td>
@@ -3816,7 +3816,7 @@
 												<div class='test-info'>
 													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-09-24 23:05:43</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-09-24 23:06:05</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 22s+189ms</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 22s+0ms</span>
 												</div>
 												<div class='test-desc'>To Validate login of supplier portal</div>
 												<div class='test-attributes'>
@@ -3840,22 +3840,80 @@
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
 																	<td class='timestamp'>23:05:50</td>
-																	<td class='step-details'>The browser chrome is launched with URL: https://www.fcgphotelhub.com/Login.aspx<a href='\screenshots\snap196445.png' data-featherlight='image'><img class='report-img' src='\screenshots\snap196445.png' /></a></td>
+																	<td class='step-details'>The browser chrome is launched with URL: https://www.fcgphotelhub.com/Login.aspx<a href="\screenshots\snap196445.png" data-featherlight="image"><img class="report-img" src="\screenshots\snap196445.png"></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
 																	<td class='timestamp'>23:05:53</td>
-																	<td class='step-details'>The element with xpath //input[@name='txtUsername'] is entered with data 13684<a href='\screenshots\snap169652.png' data-featherlight='image'><img class='report-img' src='\screenshots\snap169652.png' /></a></td>
+																	<td class='step-details'>The element with xpath //input[@name='txtUsername'] is entered with data 13684<a href="\screenshots\snap169652.png" data-featherlight="image"><img class="report-img" src="\screenshots\snap169652.png"></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
 																	<td class='timestamp'>23:05:56</td>
-																	<td class='step-details'>The element with xpath //input[@name='txtPassword'] is entered with data Welcome500<a href='\screenshots\snap102414.png' data-featherlight='image'><img class='report-img' src='\screenshots\snap102414.png' /></a></td>
+																	<td class='step-details'>The element with xpath //input[@name='txtPassword'] is entered with data Welcome500<a href="\screenshots\snap102414.png" data-featherlight="image"><img class="report-img" src="\screenshots\snap102414.png"></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
 																	<td class='timestamp'>23:06:04</td>
-																	<td class='step-details'>The element with xpath//input[@name='cmdLogin']is clicked successfully<a href='\screenshots\snap196892.png' data-featherlight='image'><img class='report-img' src='\screenshots\snap196892.png' /></a></td>
+																	<td class='step-details'>The element with xpath//input[@name='cmdLogin']is clicked successfully<a href="\screenshots\snap196892.png" data-featherlight="image"><img class="report-img" src="\screenshots\snap196892.png"></a></td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='7aa26fe3-cf32-45e0-8ec5-baabd01853f2'>
+											<div class='test-head'>
+												<span class='test-name'>TC001 Supplier Portal Login </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide  regression'></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-10-12 17:46:35</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-10-12 17:46:51</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 16s+1ms</span>
+												</div>
+												<div class='test-desc'>To Validate login of supplier portal</div>
+												<div class='test-attributes'>
+														<div class='categories'>
+																<span class='category text-white'>Regression</span>
+														</div>
+														<div class='authors'>
+																<span class='author text-white'>Reshma</span>
+														</div>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>17:46:41</td>
+																	<td class='step-details'>The browser chrome is launched with URL: https://stage-www.fcgphotelhub.com/Login.aspx<a href='\screenshots\snap144114.png' data-featherlight='image'><img class='report-img' src='\screenshots\snap144114.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>17:46:44</td>
+																	<td class='step-details'>The element with xpath //input[@name='txtUsername'] is entered with data 13684<a href='\screenshots\snap115700.png' data-featherlight='image'><img class='report-img' src='\screenshots\snap115700.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>17:46:46</td>
+																	<td class='step-details'>The element with xpath //input[@name='txtPassword'] is entered with data Welcome500<a href='\screenshots\snap157430.png' data-featherlight='image'><img class='report-img' src='\screenshots\snap157430.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>17:46:50</td>
+																	<td class='step-details'>The element with xpath//input[@name='cmdLogin']is clicked successfully<a href='\screenshots\snap174749.png' data-featherlight='image'><img class='report-img' src='\screenshots\snap174749.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
@@ -3916,14 +3974,14 @@
 													<span class='category-name'>Regression</span>
 												</div>
 												<div class='category-status-counts'>
-														<span class='pass label dot'>Pass: 12</span>
+														<span class='pass label dot'>Pass: 13</span>
 														<span class='fail label dot'>Fail: 14</span>
 														<span class='other label dot'>Others: 2</span>
 												</div>
 												<div class='cat-body'>
 													<div class='category-status-counts'>
 														<div class='button-group'>
-															<a href='#!' class='pass label filter'>Pass <span class='icon'>12</span></a>
+															<a href='#!' class='pass label filter'>Pass <span class='icon'>13</span></a>
 															<a href='#!' class='fail label filter'>Fail <span class='icon'>14</span></a>
 															<a href='#!' class='other label filter'>Others <span class='icon'>2</span></a>
 														</div>
@@ -4076,6 +4134,11 @@
 																	<tr class='pass'>
 																		<td>2020-09-24 23:05:43</td>
 																		<td><span class='category-link linked' extentid='84f410ad-9edc-4ae8-889a-a281fc119c67'>TC001 Supplier Portal Login</span></td>
+																		<td><div class='status label capitalize pass'>pass</div></td>
+																	</tr>
+																	<tr class='pass'>
+																		<td>2020-10-12 17:46:35</td>
+																		<td><span class='category-link linked' extentid='7aa26fe3-cf32-45e0-8ec5-baabd01853f2'>TC001 Supplier Portal Login</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
